new/.stack-work/logs/cmark-0.5.6.log
Configuring cmark-0.5.6...
Building cmark-0.5.6...
Preprocessing library cmark-0.5.6...
[1 of 1] Compiling CMark            ( .stack-work\dist\ca59d0ab\build\CMark.hs, .stack-work\dist\ca59d0ab\build\CMark.o )
cbits\inlines.c: In function 'process_emphasis':

cbits\inlines.c:551:56: error:
     warning: 'openers_bottom_index' may be used uninitialized in this function [-Wmaybe-uninitialized]
           while (opener != NULL && opener != openers_bottom[openers_bottom_index]) {
                                                            ^
Installing library in
C:\sr\snapshots\e46bddb7\lib\x86_64-windows-ghc-8.0.2\cmark-0.5.6-8b16H68ySpi5g2nv3mHGot
Registering cmark-0.5.6...
